feat - add img markup

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum finibus elit eget nisi efficitur, non ullamcorper ligula mattis. Proin sit amet leo elit. Fusce tincidunt at tortor consequat ullamcorper. Pellentesque eleifend scelerisque erat. Morbi laoreet justo accumsan, interdum justo sed, hendrerit orci. Praesent sed felis ac risus efficitur dapibus. Integer efficitur, diam at malesuada faucibus, dui purus posuere diam, in sagittis odio mauris a turpis. Vestibulum faucibus libero nec eros maximus, non sollicitudin ipsum varius. Nam vehicula lectus purus, id gravida ex pulvinar ac. Nulla tincidunt augue eget dui convallis, sit amet eleifend massa auctor. Ut rutrum at arcu a vestibulum. Sed pulvinar dolor a neque mollis elementum. Nullam euismod, augue vitae luctus vestibulum, felis elit mattis ligula, eget rutrum ex quam sed turpis.
         </p>
         <p>
+          <img src="profile.jpg" alt="image de profile generique">
           <a href="#">ici</a>
         </p>
       </main>
